Add meta field to gamedata
